<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bloc_note.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/editionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnGras"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/btn_margin"
                android:layout_marginEnd="@dimen/btn_margin"
                android:text="@string/txtGras"
                android:background="@drawable/bouton_bleu"
                android:onClick="btnClicked"
                style="?android:attr/borderlessButtonStyle" />
            <Button
                android:id="@+id/btnItalique"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/btn_margin"
                android:layout_marginEnd="@dimen/btn_margin"
                android:text="@string/txtItalique"
                android:background="@drawable/bouton_bleu"
                android:onClick="btnClicked"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/btnSouligne"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/btn_margin"
                android:layout_marginEnd="@dimen/btn_margin"
                android:text="@string/txtSouligne"
                android:background="@drawable/bouton_bleu"
                android:onClick="btnClicked"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/smileysLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/editionLayout"
            android:layout_marginTop="@dimen/line_space">
            <TextView
                android:id="@+id/smileysTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtSmileys"/>
            <Button
                android:id="@+id/smileysSourireButton"
                android:layout_width="@dimen/smileys_dim"
                android:layout_height="@dimen/smileys_dim"
                android:layout_marginStart="@dimen/smileys_margin"
                android:layout_marginEnd="@dimen/smileys_margin"
                android:background="@drawable/bouton_smiley_sourire"
                android:onClick="btnClicked"/>
            <Button
                android:id="@+id/smileysRireButton"
                android:layout_width="@dimen/smileys_dim"
                android:layout_height="@dimen/smileys_dim"
                android:layout_marginStart="@dimen/smileys_margin"
                android:layout_marginEnd="@dimen/smileys_margin"
                android:background="@drawable/bouton_smiley_rire"
                android:onClick="btnClicked"/>
            <Button
                android:id="@+id/smileysClinOeilButton"
                android:layout_width="@dimen/smileys_dim"
                android:layout_height="@dimen/smileys_dim"
                android:layout_marginStart="@dimen/smileys_margin"
                android:layout_marginEnd="@dimen/smileys_margin"
                android:background="@drawable/bouton_smiley_clin_oeil"
                android:onClick="btnClicked"/>
        </LinearLayout>
        <RadioGroup
            android:id="@+id/couleurRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/smileysLayout"
            android:layout_marginTop="@dimen/line_space"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/noirRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtNoir"
                android:checked="true" />
            <RadioButton
                android:id="@+id/bleuRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtBleu"/>
            <RadioButton
                android:id="@+id/rougeRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtRouge"/>
        </RadioGroup>
        <Button
            android:id="@+id/btnCacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/couleurRadioGroup"
            android:layout_marginTop="@dimen/line_space"
            android:text="@string/txtCacher"
            android:background="@drawable/bouton_vert"
            style="?android:attr/borderlessButtonStyle"
            android:onClick="btnClicked"/>
        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_below="@id/btnCacher" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:layout_below="@id/btnCacher"
            android:layout_marginTop="@dimen/line_space">
            <TableRow>
                <TextView
                    android:text="@string/txtEdition"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editionEditText"
                    android:inputType="textMultiLine"
                    android:lines="20"
                    android:minLines="5"
                    android:scrollHorizontally="false"
                    android:scrollbars="vertical"
                    android:singleLine="false"/>
            </TableRow>
            <TableRow>
                <TextView android:text="@string/txtPrevisialisation"/>
                <TextView android:id="@+id/previsialisationTextView" android:lines="3"/>
            </TableRow>
        </TableLayout>

        <AnalogClock
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/analogClock"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tableLayout"
            android:layout_marginTop="@dimen/line_space"/>

    </RelativeLayout>
</ScrollView>